--- a/views/home/index.html
+++ b/views/home/index.html
@@ -11,7 +11,8 @@
                                 <img src="{{$value.CoverageURL}}" alt="{{$value.Title}}" class="img-fluid"> 
 
                                 <div class="series-card-details d-flex align-items-center">
-                                        <span class="badge badge-danger mt-1 ml-1 tag-name-link"> {{$value.FirstTagName}}</span>
+                                        <span class="badge badge-danger  tag-name-link mt-1 "> {{$value.FirstTagName}}</span>
+                                        <span class="badge badge-primary tag-week-day mt-1 mr-3">{{$value.CreatedWeekday}}</span>
                                         <h4 class="text-center w-100">{{$value.Title}}</h4>
                                 </div>
                         </div>
