修改详情样式

--- a/views/layout/base_view.html
+++ b/views/layout/base_view.html
@@ -21,7 +21,7 @@
 
             <!-- 侧边栏-->
             <div class="col-md-4 pl-sm-1 pl-xs-2">
-                 {{range $key, $img := .Imgs}}
+                {{range $key, $img := .Imgs}}
                 <div class="card p-2 mb-1">
                     <img class="img-thunmbnail" src="{{$img.Src}}">
                 </div>
@@ -35,6 +35,15 @@
                     </ul>
                 </div>
 
+            </div>
+            <div class="card">
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- ad01 -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8488823422266592" data-ad-slot="7189420466" data-ad-format="auto"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+
+                </script>
             </div>
             <!-- 侧边栏-->
 
