--- a/views/article/view.html
+++ b/views/article/view.html
@@ -2,35 +2,39 @@
 <!--评分-->
 <script src="//cdn.bootcss.com/raty/2.7.1/jquery.raty.js"></script>
 
-<div class="card p-sm-3 mb-1 p-xs-1">
+<div class="card p-3 mb-1">
     <h1 class="text-center text-danger lead">{{.Article.Title}}</h1>
-    {{if .IsAdmin  }}
-        <a href="http://www.trytv.org/article/{{.Article.ID}}/edit" target="_blank">编辑</a>
-    {{end}}
+    {{if .IsAdmin }}
+    <a href="http://www.trytv.org/article/{{.Article.ID}}/edit" target="_blank">编辑</a> {{end}}
     <ul class="list-inline d-flex flex-row-reverse mt-2">
-        <li class="list-inline-item mr-3">
-            <strong><span class="fa fa-calendar" title="发布日期"></strong> <span class="text-grey">{{.Article.CreatedDate}}</span>
+        <li class="list-inline-item mr-2">
+            <span class="fa fa-calendar" title="发布日期"></span>
+            <span class="text-grey">{{.Article.CreatedDate}}</span>
         </li>
-        <li class="list-inline-item mr-3">
-            <strong class="mr-1"><span class="ion-clock" title="发布时间 publiced time" data-time={{dateformat .Article.CreatedAt "2006-01-02 15:04:11"}}></strong>            <span class="text-grey"> {{.Article.CreatedTime}}</span>
+        <li class="list-inline-item mr-2">
+            <span class="ion-clock mr-2" title="发布时间 publiced time" data-time={{ .Article.CreatedAt}}></span>
+            <span class="text-grey"> {{.Article.CreatedTime}}</span>
         </li>
-        <li class="list-inline-item mr-3">
-            <strong class="mr-1"><span class="ion-eye" title="阅读数量 read count"></strong><span class="text-grey"> {{.Vote.Visit}}</span>
+        <li class="list-inline-item mr-2">
+            <span class="ion-eye mr-2" title="阅读数量 read count"></span>
+            <span class="text-grey"> {{.Vote.Visit}}</span>
         </li>
 
-        <li class="list-inline-item mr-3">
-            <strong class="mr-1"><span class="ion-star" title="评分 review score"></strong><span class="text-grey"> {{.Vote.Score}}</span>
+        <li class="list-inline-item mr-2">
+            <span class="ion-star mr-2" title="评分 review score"></span>
+            <span class="text-grey"> {{.Vote.Score}}</span>
         </li>
-        <li class="list-inline-item mr-3">
-            <strong class="mr-1 mr-3"><span class="ion-heart" title="收藏数量 favarate count"></strong><span class="text-grey"> {{.Vote.FavorateCount}}</span>
+        <li class="list-inline-item mr-2">
+            <span class="ion-heart mr-2" title="收藏数量 favarate count"></span>
+            <span class="text-grey"> {{.Vote.FavorateCount}}</span>
         </li>
     </ul>
     <!--str2html 显示输出html代码-->
     <article id="content">{{str2html .Article.Body}}</article>
 
     {{if .Article.VideoCode}}
-        <hr>
-        <div id="card">{{str2html .Article.VideoCode}}</div>
+    <hr>
+    <div id="card">{{str2html .Article.VideoCode}}</div>
     {{end}}
 </div>
 
@@ -65,4 +69,5 @@
         ).before("<span style='font-size: 15px!important;position: absolute;right: 172px;top: 19px; '><i id='vote-count' class='text-info'>" + voteCount + "</i>次评价:<strong id='score' class='text-primary'>" + rateScore + "</strong>分</span>");
 
     })
+
 </script>
