--- a/views/home/index.html
+++ b/views/home/index.html
@@ -1,7 +1,7 @@
 <div class="row no-gutters">
         {{range $index, $value := .Articles}}
         <!--Card-->
-        <div class="col-md-4 col-sm-6 col-xs-12 pl-md-3 pl-sm-2 pl-xs-0 pb-1 demo">
+        <div class="col-md-4 col-sm-6 col-xs-12 pb-1 article-card-padding">
                 <div class="card">
                         <!--Card image-->
                         <a href="/article/{{$value.ID}}" title="{{$value.Title}}">
