--- a/views/home/index.html
+++ b/views/home/index.html
@@ -22,7 +22,7 @@
                         <!--Card content-->
                         <div class="card-block">
                                 <!--Title-->
-                                <p class="card-text">{{ $value.Excerpt }}</p>
+                                <p class="card-text excerpt">{{ $value.Excerpt }}</p>
 
                                 <ul class="list-inline d-flex justify-content-between mb-0">
                                         <li class="list-inline-item">
