--- a/static/css/my.css
+++ b/static/css/my.css
@@ -61,7 +61,11 @@ body > div > div.content-wrapper > section.content > div > div.media-body > ul {
     -webkit-box-direction: normal
 }
 /* 鼠标悬停的时候 */
-
+.excerpt {
+    overflow: hidden;
+    text-overflow: ellipsis!important;
+    height: 132px;
+}
 .series-card-details:hover {
     opacity:0
 }
