--- a/views/home/index.html
+++ b/views/home/index.html
@@ -62,7 +62,7 @@
         var offset = 30; /*offset*/
         var size = 3
         function fillJsonDataIntoDomeNode(articleItem) {
-                cloneNode = $(' div.row.no-gutters > div.demo:first').clone();
+                cloneNode = $(' div.row.no-gutters > div.article-card-padding:first').clone();
                 var href = '/article/' + articleItem.ID;
                 var title = articleItem.Title;
                 var imgSrc = articleItem.CoverageURL;
