--- a/views/layout/base_index.html
+++ b/views/layout/base_index.html
@@ -11,6 +11,8 @@
                 <!--{{template "layout/_breadcrumb.html" .}}-->
                 <!--面包屑-->
                 <!--正文-->
+                {{template "layout/_tags.html" .}}
+
                 {{.LayoutContent}}
                 <!--正文-->
                 {{template "layout/_share_comment.html" .}}
