--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -10,35 +10,20 @@
         <li class="nav-item">
           <a class="nav-link" href="/">最新资讯</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/tag/1">美剧剧评</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="/tag/2">趣闻动图</a>
+          <a class="nav-link" href="/tag/2">搞笑图文</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/tag/3">趣味视频</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link " href="/tag/4">电子读物</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link " href="/tag/5">趣图翻译</a>
-        </li>
-        <li class="nav-item ">
           <a class="nav-link " href="/tag/6">字幕分享</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/tag/7">留学资讯</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link " href="/tag/8">名言锦句</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link " href="/tag/9">有声读物</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link " href="/tag/10">游戏CG</a>
         </li>
         <li class="nav-item btn-group">
           <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">短片</a>
