--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -26,16 +26,19 @@
           <a class="nav-link " href="/tag/9">有声读物</a>
         </li>
         <li class="nav-item btn-group">
-          <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">短片</a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <a class="dropdown-item">美文</a>
-            <a class="dropdown-item">趣玩</a>
-            <a class="dropdown-item">创意</a>
+          <a class="nav-link dropdown-toggle" id="all-tags" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">更多</a>
+          <div class="dropdown-menu" aria-labelledby="all-tags">
+            <a class="dropdown-item">视频博客</a>
+            <a class="dropdown-item">动图市集</a>
+            <a class="dropdown-item">创意玩意</a>
+            <a class="dropdown-item">全部分类</a>
+
           </div>
         </li>
       </ul>
       <form class="form-inline waves-effect waves-light">
-        <input class="form-control" type="text" placeholder="Search">
+        <input class="form-control" type="text" placeholder="文章搜索">
+        <button class="input-search-btn" type="submit"><span class="fa fa-search" ></span></button>
       </form>
 
 
