--- a/views/layout/base_index.html
+++ b/views/layout/base_index.html
@@ -11,7 +11,6 @@
                 <!--{{template "layout/_breadcrumb.html" .}}-->
                 <!--面包屑-->
                 <!--正文-->
-                {{template "layout/_tags.html" .}}
 
                 {{.LayoutContent}}
                 <!--正文-->
@@ -21,13 +20,9 @@
     </div>
     {{template "layout/_footer.html" .}}
 
-    <!-- Bootstrap tooltips -->
-    <script src="//cdn.bootcss.com/tether/1.4.0/js/tether.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script src="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script src="//cdn.bootcss.com/mdbootstrap/4.3.2/js/mdb.min.js"></script>
 
+
+    {{template "layout/_script.html" .}}
 </body>
 
 </html>
