--- a/views/layout/base_view.html
+++ b/views/layout/base_view.html
@@ -8,7 +8,7 @@
     <div class="container pt-1">
         <div class="row">
             <!--正文-->
-            <div class="col-md-8">
+            <div class="col-md-8 ml-0">
                 <!--面包屑-->
                 {{template "layout/_breadcrumb.html" .}}
                 <!--面包屑-->
@@ -21,6 +21,10 @@
 
             <!-- 侧边栏-->
             <div class="col-md-4 pl-sm-1 pl-xs-2">
+
+                {{template "layout/_tags.html" .}}
+
+
                 {{range $key, $img := .Imgs}}
                 <div class="card p-2 mb-1">
                     <img class="img-thunmbnail" src="{{$img.Src}}">
@@ -36,15 +40,7 @@
                 </div>
 
             </div>
-            <div class="card">
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- ad01 -->
-                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8488823422266592" data-ad-slot="7189420466" data-ad-format="auto"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
 
-                </script>
-            </div>
             <!-- 侧边栏-->
 
 
@@ -53,12 +49,7 @@
     </div>
     {{template "layout/_footer.html" .}}
 
-    <!-- Bootstrap tooltips -->
-    <script src="//cdn.bootcss.com/tether/1.4.0/js/tether.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script src="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script src="//cdn.bootcss.com/mdbootstrap/4.3.2/js/mdb.min.js"></script>
+    {{template "layout/_script.html" .}}
 
 </body>
 
