--- a/views/layout/base_view.html
+++ b/views/layout/base_view.html
@@ -8,7 +8,7 @@
     <div class="container pt-1">
         <div class="row">
             <!--正文-->
-            <div class="col-md-8 ml-0">
+            <div class="col-md-8 ml-0 mb-1">
                 <!--面包屑-->
                 {{template "layout/_breadcrumb.html" .}}
                 <!--面包屑-->
