--- a/views/tag/view.html
+++ b/views/tag/view.html
@@ -6,7 +6,7 @@
                         <!--Card image-->
                         <a href="/article/{{$value.ID}}" title="{{$value.Title}}">
                                 <div class="view overlay hm-white-slight show-cursor">
-                                        <img data-original="{{$value.CoverageURL}}" alt="{{$value.Title}}" class="img-fluid w-100 lazy">
+                                        <img data-original="{{$value.CoverageURL}}" alt="{{$value.Title}}" class="img-fluid w-100 h-56 lazy">
 
                                         <div class="series-card-details d-flex align-items-center">
                                                 <span class="badge badge-danger  tag-name-link mt-1 "> {{$.Tag.Name}}</span>
