--- a/views/subtitle/index.html
+++ b/views/subtitle/index.html
@@ -4,17 +4,33 @@
     {{range $index, $value := .Subtitles}}
     <div class="col-sm-12 col-md-6 col-lg-4 pb-1 pl-1 subtitle-container">
         <div class="card">
-            <div class=" bg-primary align-middle ">
-                <p class="text-center text-white m-2 subtitle-title">{{$value.Name}}</p>
+            <div class=" bg-primary align-middle text-white text-center">
+                <p class="subtitle-title-zh m-1">{{$value.NameZh}}</p>
+                <p class="subtitle-title-en mx-1 mb-1">{{$value.NameEn}}</p>
             </div>
-            <div class="subtitle-item text-center ">
-                <p>
-                    <span class="fa fa-calendar" title="发布时间 publiced time"></span>
-                    <small> {{dateformat $value.CreatedAt "2006-01-02 15:04"}}</small>
-                </p>
-                <a class="subtitle" data-href="{{$value.Url}}">
-                    <span class="fa fa-download"></span>
-                </a>
+            <div class="subtitle-item">
+                <div class="row d-flex align-items-center h-100">
+
+                    <ul class="col-9 mb-0">
+                        <li>
+                            <span class="fa fa-calendar align-middle" title="发布时间 publiced time"></span>
+                            <small class="align-middle"> {{dateformat $value.CreatedAt "06-01-02 15:04"}}</small>
+                        </li>
+                        <li>
+                            <span class="fa fa-language align-middle" title="发布时间 publiced time"></span>
+                            <small class="align-middle"> {{$value.Lang}}</small>
+                        </li>
+                        <li>
+                            <span class="fa fa-map-o align-middle" title="发布时间 publiced time"></span>
+                            <small class="align-middle"> {{$value.Format}}</small>
+                        </li>
+                    </ul>
+                    <div class="col-3 text-center">
+                        <a class="subtitle align-middle" href="{{$value.OssUrl}}" download="{{$value.FileName}}">
+                            <span class="fa fa-download"></span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -23,9 +39,5 @@
 
 
 <script>
-    $('a.subtitle').click(function(){
-        Object.defineProperty(document, "referrer", {get : function(){ return "assrt.net"; }});
-        url = 'http://file0.assrt.net' + $(this).data('href');
-        window.open('http://www.smkproduction.eu5.org','_blank');
-    });
+
 </script>
