--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/tag/3">趣味视频</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link " href="/tag/6">字幕分享</a>
+          <a class="nav-link " href="/subtitle">字幕分享</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link " href="/tag/8">名言锦句</a>
