--- a/views/subtitle/index.html
+++ b/views/subtitle/index.html
@@ -42,7 +42,7 @@
 </div>
 
 <!--加载更多按钮-->
-<button type="button" id="load-more" class="btn btn-warning btn-block waves-effect waves-light mb-3">加载更多</button>
+<button type="button" id="load-more" class="btn stylish-color btn-block waves-effect waves-light mb-3">加载更多</button>
 <script>
     function setSubtilteWithColor(){
         var colorClasses = ['danger-color', 'orange', 'primary-color', 'success-color', 'info-color', 'warning-color', 'default-color'];
